# seqwin-scm

./: CMakeLists.txt  README.md  pyproject.toml
cpp/: CMakeLists.txt  bindings.cpp  python_bindings.cpp  scm_core.cpp  scm_core.hpp  seqwin_scm_core.cpp  solver.cpp  solver.hpp
src/scm/: __init__.py
src/seqwin_scm/: __init__.py
tests/: test_smoke.py
