[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "scm"
version = "0.1.0"
description = "Seqwin SCM algorithm ported to C++ with pybind11"
readme = "README.md"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.9"
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]


[tool.scikit-build]
# cache build artifacts per wheel tag for faster rebuilds
build-dir = "build/{wheel_tag}"

cmake.source-dir = "cpp"

# export compile_commands.json under build/
[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
